--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <head>
-  <link href="/node_modules/video.js/dist/video-js.min.css" rel="stylesheet">
+  <link href="node_modules/video.js/dist/video-js.min.css" rel="stylesheet">
+  <!-- Example on customize skin -->
+  <!--
   <style type="text/css">
-    /* Chrismax progress bar skin */
     .vjs-progress-holder {
       color: yellow !important;
       background: green !important;
@@ -10,13 +11,17 @@
       background: red !important;
     }
   </style>
-  <script src="/node_modules/video.js/dist/video.min.js"></script>
+  -->
+  <script src="node_modules/video.js/dist/video.min.js"></script>
+  <script src="node_modules/videojs-contrib-hls/dist/videojs-contrib-hls.min.js"></script>
 </head>
 
 <body>
   <video id="my-player" class="video-js">
-    <source src="//vjs.zencdn.net/v/oceans.mp4" type="video/mp4">
-    <source src="//vjs.zencdn.net/v/oceans.webm" type="video/webm">
+    <!-- Localhost stream -->
+    <source src="http://localhost:8080/hls/hkoscon.m3u8" type="application/x-mpegURL">
+    <!-- Reverse proxy stream -->
+    <!-- <source src="<https ngrok url>/hls/hkoscon.m3u8" type="application/x-mpegURL"> -->
     <p class="vjs-no-js">
       To view this video please enable JavaScript, and consider upgrading to a web browser that
       <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
